--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<iframe>url=https://replit.com/@gusangelideswor/Easy-pygame-UImaker</iframe>
+<iframe src="https://replit.com/@gusangelideswor/Easy-pygame-UImaker"
+</iframe>
